--- a/src/commcare_cloud/ansible/roles/nginx/tasks/reload.yml
+++ b/src/commcare_cloud/ansible/roles/nginx/tasks/reload.yml
@@ -6,6 +6,10 @@
   check_mode: no
   failed_when: "result.rc != 0"
 
+- name: start the nginx service (if it's not started)
+  become: yes
+  service: name=nginx state=started enabled=yes
+
 - name: reload the nginx service
   become: yes
   service: name=nginx state=reloaded enabled=yes
