--- a/src/commcare_cloud/ansible/deploy_proxy.yml
+++ b/src/commcare_cloud/ansible/deploy_proxy.yml
@@ -141,6 +141,7 @@
         name: nginx
         tasks_from: set_site_present
       vars:
+        site_present: "{{ 'blobdb_proxy' in special_sites }}"
         site_config: {name: blobdb_proxy, vars_file: blobdb}
 
 - name: PNA Proxy
