--- a/environments/icds-cas/proxy.yml
+++ b/environments/icds-cas/proxy.yml
@@ -9,6 +9,7 @@ CAS_SITE_HOST: 'cas.commcarehq.org'
 
 special_sites:
   - cas_ssl
+  - blobdb_proxy
 
 letsencrypt_cchq_ssl: True
 letsencrypt_cas_ssl: True
