--- a/src/commcare_cloud/ansible/deploy_postgres.yml
+++ b/src/commcare_cloud/ansible/deploy_postgres.yml
@@ -52,7 +52,7 @@
     - state: 'present'
   tasks:
     - import_tasks: roles/setup_auth_keys.yml
-      when: hot_standby_server is defined
+      when: hot_standby_server
   tags:
     - pg_standby
 
