move logic for dbs on which host into python

--- a/tests/postgresql_config/2018-04-04-development-snapshot/.generated.yml
+++ b/tests/postgresql_config/2018-04-04-development-snapshot/.generated.yml
@@ -1,38 +1,46 @@
 postgresql_dbs:
   all:
-  - create: true
+  - &id001
+    create: true
     django_alias: default
     django_migrate: true
     host: 192.168.33.16
-    pgbouncer_host: 192.168.33.16
     name: commcarehq
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 192.168.33.16
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id002
+    create: true
     django_alias: ucr
     django_migrate: false
     host: 192.168.33.16
-    pgbouncer_host: 192.168.33.16
     name: commcarehq_ucr
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 192.168.33.16
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id003
+    create: true
     django_alias: null
     django_migrate: true
     host: 192.168.33.16
-    pgbouncer_host: 192.168.33.16
     name: formplayer
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 192.168.33.16
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
+  by_host:
+    192.168.33.16:
+    - *id001
+    - *id002
+    - *id003
   custom: []
   form_processing: null
   formplayer:
@@ -40,10 +48,10 @@ postgresql_dbs:
     django_alias: null
     django_migrate: true
     host: 192.168.33.16
-    pgbouncer_host: 192.168.33.16
     name: formplayer
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 192.168.33.16
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -52,10 +60,10 @@ postgresql_dbs:
     django_alias: default
     django_migrate: true
     host: 192.168.33.16
-    pgbouncer_host: 192.168.33.16
     name: commcarehq
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 192.168.33.16
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -66,10 +74,10 @@ postgresql_dbs:
     django_alias: ucr
     django_migrate: false
     host: 192.168.33.16
-    pgbouncer_host: 192.168.33.16
     name: commcarehq_ucr
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 192.168.33.16
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
