--- a/tests/postgresql_config/2018-04-04-production-snapshot/.generated.yml
+++ b/tests/postgresql_config/2018-04-04-production-snapshot/.generated.yml
@@ -4,10 +4,10 @@ postgresql_dbs:
     django_alias: default
     django_migrate: true
     host: hqdb0.internal-va.commcarehq.org
-    pgbouncer_host: hqdb0.internal-va.commcarehq.org
     name: commcarehq
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: hqdb0.internal-va.commcarehq.org
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -15,10 +15,10 @@ postgresql_dbs:
     django_alias: p1
     django_migrate: true
     host: hqdb1.internal-va.commcarehq.org
-    pgbouncer_host: hqdb1.internal-va.commcarehq.org
     name: commcarehq_p1
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: hqdb1.internal-va.commcarehq.org
     port: 6432
     query_stats: false
     shards: [0, 204]
@@ -27,10 +27,10 @@ postgresql_dbs:
     django_alias: p2
     django_migrate: true
     host: hqdb1.internal-va.commcarehq.org
-    pgbouncer_host: hqdb1.internal-va.commcarehq.org
     name: commcarehq_p2
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: hqdb1.internal-va.commcarehq.org
     port: 6432
     query_stats: false
     shards: [205, 409]
@@ -39,10 +39,10 @@ postgresql_dbs:
     django_alias: p3
     django_migrate: true
     host: hqdb2.internal-va.commcarehq.org
-    pgbouncer_host: hqdb2.internal-va.commcarehq.org
     name: commcarehq_p3
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: hqdb2.internal-va.commcarehq.org
     port: 6432
     query_stats: false
     shards: [410, 614]
@@ -51,10 +51,10 @@ postgresql_dbs:
     django_alias: p4
     django_migrate: true
     host: hqdb2.internal-va.commcarehq.org
-    pgbouncer_host: hqdb2.internal-va.commcarehq.org
     name: commcarehq_p4
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: hqdb2.internal-va.commcarehq.org
     port: 6432
     query_stats: false
     shards: [615, 819]
@@ -63,10 +63,10 @@ postgresql_dbs:
     django_alias: p5
     django_migrate: true
     host: hqdb2.internal-va.commcarehq.org
-    pgbouncer_host: hqdb2.internal-va.commcarehq.org
     name: commcarehq_p5
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: hqdb2.internal-va.commcarehq.org
     port: 6432
     query_stats: false
     shards: [820, 1023]
@@ -75,10 +75,10 @@ postgresql_dbs:
     django_alias: proxy
     django_migrate: true
     host: hqdb1.internal-va.commcarehq.org
-    pgbouncer_host: hqdb1.internal-va.commcarehq.org
     name: commcarehq_proxy
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: hqdb1.internal-va.commcarehq.org
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -86,10 +86,10 @@ postgresql_dbs:
     django_alias: synclogs
     django_migrate: true
     host: pgsynclog.internal-va.commcarehq.org
-    pgbouncer_host: pgsynclog.internal-va.commcarehq.org
     name: commcarehq_synclogs
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: pgsynclog.internal-va.commcarehq.org
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -97,10 +97,10 @@ postgresql_dbs:
     django_alias: ucr
     django_migrate: false
     host: hqdb0.internal-va.commcarehq.org
-    pgbouncer_host: hqdb0.internal-va.commcarehq.org
     name: commcarehq_ucr
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: hqdb0.internal-va.commcarehq.org
     port: 6432
     query_stats: true
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -108,13 +108,14 @@ postgresql_dbs:
     django_alias: null
     django_migrate: true
     host: hqdb0.internal-va.commcarehq.org
-    pgbouncer_host: hqdb0.internal-va.commcarehq.org
     name: formplayer
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: hqdb0.internal-va.commcarehq.org
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
+  by_host: {}
   custom: []
   form_processing:
     partitions:
@@ -123,10 +124,10 @@ postgresql_dbs:
         django_alias: p1
         django_migrate: true
         host: hqdb1.internal-va.commcarehq.org
-        pgbouncer_host: hqdb1.internal-va.commcarehq.org
         name: commcarehq_p1
         options: {}
         password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+        pgbouncer_host: hqdb1.internal-va.commcarehq.org
         port: 6432
         query_stats: false
         shards: [0, 204]
@@ -136,10 +137,10 @@ postgresql_dbs:
         django_alias: p2
         django_migrate: true
         host: hqdb1.internal-va.commcarehq.org
-        pgbouncer_host: hqdb1.internal-va.commcarehq.org
         name: commcarehq_p2
         options: {}
         password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+        pgbouncer_host: hqdb1.internal-va.commcarehq.org
         port: 6432
         query_stats: false
         shards: [205, 409]
@@ -149,10 +150,10 @@ postgresql_dbs:
         django_alias: p3
         django_migrate: true
         host: hqdb2.internal-va.commcarehq.org
-        pgbouncer_host: hqdb2.internal-va.commcarehq.org
         name: commcarehq_p3
         options: {}
         password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+        pgbouncer_host: hqdb2.internal-va.commcarehq.org
         port: 6432
         query_stats: false
         shards: [410, 614]
@@ -162,10 +163,10 @@ postgresql_dbs:
         django_alias: p4
         django_migrate: true
         host: hqdb2.internal-va.commcarehq.org
-        pgbouncer_host: hqdb2.internal-va.commcarehq.org
         name: commcarehq_p4
         options: {}
         password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+        pgbouncer_host: hqdb2.internal-va.commcarehq.org
         port: 6432
         query_stats: false
         shards: [615, 819]
@@ -175,10 +176,10 @@ postgresql_dbs:
         django_alias: p5
         django_migrate: true
         host: hqdb2.internal-va.commcarehq.org
-        pgbouncer_host: hqdb2.internal-va.commcarehq.org
         name: commcarehq_p5
         options: {}
         password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+        pgbouncer_host: hqdb2.internal-va.commcarehq.org
         port: 6432
         query_stats: false
         shards: [820, 1023]
@@ -188,10 +189,10 @@ postgresql_dbs:
       django_alias: proxy
       django_migrate: true
       host: hqdb1.internal-va.commcarehq.org
-      pgbouncer_host: hqdb1.internal-va.commcarehq.org
       name: commcarehq_proxy
       options: {}
       password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+      pgbouncer_host: hqdb1.internal-va.commcarehq.org
       port: 6432
       query_stats: false
       user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -200,10 +201,10 @@ postgresql_dbs:
     django_alias: null
     django_migrate: true
     host: hqdb0.internal-va.commcarehq.org
-    pgbouncer_host: hqdb0.internal-va.commcarehq.org
     name: formplayer
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: hqdb0.internal-va.commcarehq.org
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -212,10 +213,10 @@ postgresql_dbs:
     django_alias: default
     django_migrate: true
     host: hqdb0.internal-va.commcarehq.org
-    pgbouncer_host: hqdb0.internal-va.commcarehq.org
     name: commcarehq
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: hqdb0.internal-va.commcarehq.org
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -225,10 +226,10 @@ postgresql_dbs:
     django_alias: synclogs
     django_migrate: true
     host: pgsynclog.internal-va.commcarehq.org
-    pgbouncer_host: pgsynclog.internal-va.commcarehq.org
     name: commcarehq_synclogs
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: pgsynclog.internal-va.commcarehq.org
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -237,10 +238,10 @@ postgresql_dbs:
     django_alias: ucr
     django_migrate: false
     host: hqdb0.internal-va.commcarehq.org
-    pgbouncer_host: hqdb0.internal-va.commcarehq.org
     name: commcarehq_ucr
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: hqdb0.internal-va.commcarehq.org
     port: 6432
     query_stats: true
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
