--- a/tests/postgresql_config/2018-04-04-enikshay-snapshot/.generated.yml
+++ b/tests/postgresql_config/2018-04-04-enikshay-snapshot/.generated.yml
@@ -1,180 +1,212 @@
 postgresql_dbs:
   all:
-  - create: true
+  - &id001
+    create: true
     django_alias: default
     django_migrate: true
     host: 172.25.3.5
-    pgbouncer_host: 172.25.3.5
     name: commcarehq
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 172.25.3.5
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id002
+    create: true
     django_alias: p1
     django_migrate: true
     host: 172.25.3.5
-    pgbouncer_host: 172.25.3.5
     name: commcarehq_p1
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 172.25.3.5
     port: 6432
     query_stats: false
     shards: [0, 103]
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id003
+    create: true
     django_alias: p10
     django_migrate: true
     host: 172.25.3.5
-    pgbouncer_host: 172.25.3.5
     name: commcarehq_p10
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 172.25.3.5
     port: 6432
     query_stats: false
     shards: [927, 1023]
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id004
+    create: true
     django_alias: p2
     django_migrate: true
     host: 172.25.3.5
-    pgbouncer_host: 172.25.3.5
     name: commcarehq_p2
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 172.25.3.5
     port: 6432
     query_stats: false
     shards: [104, 205]
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id005
+    create: true
     django_alias: p3
     django_migrate: true
     host: 172.25.3.5
-    pgbouncer_host: 172.25.3.5
     name: commcarehq_p3
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 172.25.3.5
     port: 6432
     query_stats: false
     shards: [206, 308]
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id006
+    create: true
     django_alias: p4
     django_migrate: true
     host: 172.25.3.5
-    pgbouncer_host: 172.25.3.5
     name: commcarehq_p4
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 172.25.3.5
     port: 6432
     query_stats: false
     shards: [309, 411]
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id007
+    create: true
     django_alias: p5
     django_migrate: true
     host: 172.25.3.5
-    pgbouncer_host: 172.25.3.5
     name: commcarehq_p5
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 172.25.3.5
     port: 6432
     query_stats: false
     shards: [412, 514]
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id008
+    create: true
     django_alias: p6
     django_migrate: true
     host: 172.25.3.5
-    pgbouncer_host: 172.25.3.5
     name: commcarehq_p6
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 172.25.3.5
     port: 6432
     query_stats: false
     shards: [515, 617]
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id009
+    create: true
     django_alias: p7
     django_migrate: true
     host: 172.25.3.5
-    pgbouncer_host: 172.25.3.5
     name: commcarehq_p7
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 172.25.3.5
     port: 6432
     query_stats: false
     shards: [618, 720]
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id010
+    create: true
     django_alias: p8
     django_migrate: true
     host: 172.25.3.5
-    pgbouncer_host: 172.25.3.5
     name: commcarehq_p8
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 172.25.3.5
     port: 6432
     query_stats: false
     shards: [721, 823]
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id011
+    create: true
     django_alias: p9
     django_migrate: true
     host: 172.25.3.5
-    pgbouncer_host: 172.25.3.5
     name: commcarehq_p9
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 172.25.3.5
     port: 6432
     query_stats: false
     shards: [824, 926]
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id012
+    create: true
     django_alias: proxy
     django_migrate: true
     host: 172.25.3.5
-    pgbouncer_host: 172.25.3.5
     name: commcarehq_proxy
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 172.25.3.5
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id013
+    create: true
     django_alias: synclogs
     django_migrate: true
     host: 172.25.3.5
-    pgbouncer_host: 172.25.3.5
     name: commcarehq_synclogs
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 172.25.3.5
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id014
+    create: true
     django_alias: ucr
     django_migrate: false
     host: 172.25.3.5
-    pgbouncer_host: 172.25.3.5
     name: commcarehq_ucr
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 172.25.3.5
     port: 6432
     query_stats: true
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id015
+    create: true
     django_alias: null
     django_migrate: true
     host: 172.25.3.5
-    pgbouncer_host: 172.25.3.5
     name: formplayer
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 172.25.3.5
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
+  by_host:
+    172.25.3.5:
+    - *id001
+    - *id002
+    - *id003
+    - *id004
+    - *id005
+    - *id006
+    - *id007
+    - *id008
+    - *id009
+    - *id010
+    - *id011
+    - *id012
+    - *id013
+    - *id014
+    - *id015
   custom: []
   form_processing:
     partitions:
@@ -183,10 +215,10 @@ postgresql_dbs:
         django_alias: p1
         django_migrate: true
         host: 172.25.3.5
-        pgbouncer_host: 172.25.3.5
         name: commcarehq_p1
         options: {}
         password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+        pgbouncer_host: 172.25.3.5
         port: 6432
         query_stats: false
         shards: [0, 103]
@@ -196,10 +228,10 @@ postgresql_dbs:
         django_alias: p10
         django_migrate: true
         host: 172.25.3.5
-        pgbouncer_host: 172.25.3.5
         name: commcarehq_p10
         options: {}
         password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+        pgbouncer_host: 172.25.3.5
         port: 6432
         query_stats: false
         shards: [927, 1023]
@@ -209,10 +241,10 @@ postgresql_dbs:
         django_alias: p2
         django_migrate: true
         host: 172.25.3.5
-        pgbouncer_host: 172.25.3.5
         name: commcarehq_p2
         options: {}
         password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+        pgbouncer_host: 172.25.3.5
         port: 6432
         query_stats: false
         shards: [104, 205]
@@ -222,10 +254,10 @@ postgresql_dbs:
         django_alias: p3
         django_migrate: true
         host: 172.25.3.5
-        pgbouncer_host: 172.25.3.5
         name: commcarehq_p3
         options: {}
         password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+        pgbouncer_host: 172.25.3.5
         port: 6432
         query_stats: false
         shards: [206, 308]
@@ -235,10 +267,10 @@ postgresql_dbs:
         django_alias: p4
         django_migrate: true
         host: 172.25.3.5
-        pgbouncer_host: 172.25.3.5
         name: commcarehq_p4
         options: {}
         password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+        pgbouncer_host: 172.25.3.5
         port: 6432
         query_stats: false
         shards: [309, 411]
@@ -248,10 +280,10 @@ postgresql_dbs:
         django_alias: p5
         django_migrate: true
         host: 172.25.3.5
-        pgbouncer_host: 172.25.3.5
         name: commcarehq_p5
         options: {}
         password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+        pgbouncer_host: 172.25.3.5
         port: 6432
         query_stats: false
         shards: [412, 514]
@@ -261,10 +293,10 @@ postgresql_dbs:
         django_alias: p6
         django_migrate: true
         host: 172.25.3.5
-        pgbouncer_host: 172.25.3.5
         name: commcarehq_p6
         options: {}
         password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+        pgbouncer_host: 172.25.3.5
         port: 6432
         query_stats: false
         shards: [515, 617]
@@ -274,10 +306,10 @@ postgresql_dbs:
         django_alias: p7
         django_migrate: true
         host: 172.25.3.5
-        pgbouncer_host: 172.25.3.5
         name: commcarehq_p7
         options: {}
         password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+        pgbouncer_host: 172.25.3.5
         port: 6432
         query_stats: false
         shards: [618, 720]
@@ -287,10 +319,10 @@ postgresql_dbs:
         django_alias: p8
         django_migrate: true
         host: 172.25.3.5
-        pgbouncer_host: 172.25.3.5
         name: commcarehq_p8
         options: {}
         password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+        pgbouncer_host: 172.25.3.5
         port: 6432
         query_stats: false
         shards: [721, 823]
@@ -300,10 +332,10 @@ postgresql_dbs:
         django_alias: p9
         django_migrate: true
         host: 172.25.3.5
-        pgbouncer_host: 172.25.3.5
         name: commcarehq_p9
         options: {}
         password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+        pgbouncer_host: 172.25.3.5
         port: 6432
         query_stats: false
         shards: [824, 926]
@@ -313,10 +345,10 @@ postgresql_dbs:
       django_alias: proxy
       django_migrate: true
       host: 172.25.3.5
-      pgbouncer_host: 172.25.3.5
       name: commcarehq_proxy
       options: {}
       password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+      pgbouncer_host: 172.25.3.5
       port: 6432
       query_stats: false
       user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -325,10 +357,10 @@ postgresql_dbs:
     django_alias: null
     django_migrate: true
     host: 172.25.3.5
-    pgbouncer_host: 172.25.3.5
     name: formplayer
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 172.25.3.5
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -337,10 +369,10 @@ postgresql_dbs:
     django_alias: default
     django_migrate: true
     host: 172.25.3.5
-    pgbouncer_host: 172.25.3.5
     name: commcarehq
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 172.25.3.5
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -350,10 +382,10 @@ postgresql_dbs:
     django_alias: synclogs
     django_migrate: true
     host: 172.25.3.5
-    pgbouncer_host: 172.25.3.5
     name: commcarehq_synclogs
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 172.25.3.5
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -362,10 +394,10 @@ postgresql_dbs:
     django_alias: ucr
     django_migrate: false
     host: 172.25.3.5
-    pgbouncer_host: 172.25.3.5
     name: commcarehq_ucr
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 172.25.3.5
     port: 6432
     query_stats: true
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
