--- a/tests/postgresql_config/2018-04-04-icds-new-snapshot/.generated.yml
+++ b/tests/postgresql_config/2018-04-04-icds-new-snapshot/.generated.yml
@@ -4,10 +4,10 @@ postgresql_dbs:
     django_alias: default
     django_migrate: true
     host: 10.247.164.26
-    pgbouncer_host: 10.247.164.26
     name: commcarehq
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 10.247.164.26
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -15,10 +15,10 @@ postgresql_dbs:
     django_alias: icds-ucr
     django_migrate: true
     host: 10.247.164.25
-    pgbouncer_host: 10.247.164.25
     name: commcarehq_icds_aggregatedata
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 10.247.164.25
     port: 6432
     query_stats: true
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -26,11 +26,11 @@ postgresql_dbs:
     django_alias: icds-ucr-standby1
     django_migrate: false
     host: 10.247.164.24
-    pgbouncer_host: 10.247.164.24
     hq_acceptable_standby_delay: 30
     name: commcarehq_icds_aggregatedata
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 10.247.164.24
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -38,10 +38,10 @@ postgresql_dbs:
     django_alias: p1
     django_migrate: true
     host: 10.247.164.66
-    pgbouncer_host: 10.247.164.66
     name: commcarehq_p1
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 10.247.164.66
     port: 6432
     query_stats: false
     shards: [0, 103]
@@ -50,10 +50,10 @@ postgresql_dbs:
     django_alias: p10
     django_migrate: true
     host: 10.247.164.64
-    pgbouncer_host: 10.247.164.64
     name: commcarehq_p10
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 10.247.164.64
     port: 6432
     query_stats: false
     shards: [927, 1023]
@@ -62,10 +62,10 @@ postgresql_dbs:
     django_alias: p2
     django_migrate: true
     host: 10.247.164.66
-    pgbouncer_host: 10.247.164.66
     name: commcarehq_p2
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 10.247.164.66
     port: 6432
     query_stats: false
     shards: [104, 205]
@@ -74,10 +74,10 @@ postgresql_dbs:
     django_alias: p3
     django_migrate: true
     host: 10.247.164.21
-    pgbouncer_host: 10.247.164.21
     name: commcarehq_p3
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 10.247.164.21
     port: 6432
     query_stats: false
     shards: [206, 308]
@@ -86,10 +86,10 @@ postgresql_dbs:
     django_alias: p4
     django_migrate: true
     host: 10.247.164.21
-    pgbouncer_host: 10.247.164.21
     name: commcarehq_p4
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 10.247.164.21
     port: 6432
     query_stats: false
     shards: [309, 411]
@@ -98,10 +98,10 @@ postgresql_dbs:
     django_alias: p5
     django_migrate: true
     host: 10.247.164.21
-    pgbouncer_host: 10.247.164.21
     name: commcarehq_p5
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 10.247.164.21
     port: 6432
     query_stats: false
     shards: [412, 514]
@@ -110,10 +110,10 @@ postgresql_dbs:
     django_alias: p6
     django_migrate: true
     host: 10.247.164.20
-    pgbouncer_host: 10.247.164.20
     name: commcarehq_p6
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 10.247.164.20
     port: 6432
     query_stats: false
     shards: [515, 617]
@@ -122,10 +122,10 @@ postgresql_dbs:
     django_alias: p7
     django_migrate: true
     host: 10.247.164.20
-    pgbouncer_host: 10.247.164.20
     name: commcarehq_p7
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 10.247.164.20
     port: 6432
     query_stats: false
     shards: [618, 720]
@@ -134,10 +134,10 @@ postgresql_dbs:
     django_alias: p8
     django_migrate: true
     host: 10.247.164.20
-    pgbouncer_host: 10.247.164.20
     name: commcarehq_p8
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 10.247.164.20
     port: 6432
     query_stats: false
     shards: [721, 823]
@@ -146,10 +146,10 @@ postgresql_dbs:
     django_alias: p9
     django_migrate: true
     host: 10.247.164.64
-    pgbouncer_host: 10.247.164.64
     name: commcarehq_p9
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 10.247.164.64
     port: 6432
     query_stats: false
     shards: [824, 926]
@@ -158,10 +158,10 @@ postgresql_dbs:
     django_alias: proxy
     django_migrate: true
     host: 10.247.164.56
-    pgbouncer_host: 10.247.164.56
     name: commcarehq_proxy
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 10.247.164.56
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -169,10 +169,10 @@ postgresql_dbs:
     django_alias: synclogs
     django_migrate: true
     host: 10.247.164.70
-    pgbouncer_host: 10.247.164.70
     name: commcarehq_synclogs
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 10.247.164.70
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -180,10 +180,10 @@ postgresql_dbs:
     django_alias: ucr
     django_migrate: false
     host: 10.247.164.25
-    pgbouncer_host: 10.247.164.25
     name: commcarehq_ucr
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 10.247.164.25
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -191,22 +191,23 @@ postgresql_dbs:
     django_alias: null
     django_migrate: true
     host: 10.247.164.25
-    pgbouncer_host: 10.247.164.25
     name: formplayer
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 10.247.164.25
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
+  by_host: {}
   custom:
   - create: true
     django_alias: icds-ucr
     django_migrate: true
     host: 10.247.164.25
-    pgbouncer_host: 10.247.164.25
     name: commcarehq_icds_aggregatedata
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 10.247.164.25
     port: 6432
     query_stats: true
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -217,10 +218,10 @@ postgresql_dbs:
         django_alias: p1
         django_migrate: true
         host: 10.247.164.66
-        pgbouncer_host: 10.247.164.66
         name: commcarehq_p1
         options: {}
         password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+        pgbouncer_host: 10.247.164.66
         port: 6432
         query_stats: false
         shards: [0, 103]
@@ -230,10 +231,10 @@ postgresql_dbs:
         django_alias: p10
         django_migrate: true
         host: 10.247.164.64
-        pgbouncer_host: 10.247.164.64
         name: commcarehq_p10
         options: {}
         password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+        pgbouncer_host: 10.247.164.64
         port: 6432
         query_stats: false
         shards: [927, 1023]
@@ -243,10 +244,10 @@ postgresql_dbs:
         django_alias: p2
         django_migrate: true
         host: 10.247.164.66
-        pgbouncer_host: 10.247.164.66
         name: commcarehq_p2
         options: {}
         password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+        pgbouncer_host: 10.247.164.66
         port: 6432
         query_stats: false
         shards: [104, 205]
@@ -256,10 +257,10 @@ postgresql_dbs:
         django_alias: p3
         django_migrate: true
         host: 10.247.164.21
-        pgbouncer_host: 10.247.164.21
         name: commcarehq_p3
         options: {}
         password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+        pgbouncer_host: 10.247.164.21
         port: 6432
         query_stats: false
         shards: [206, 308]
@@ -269,10 +270,10 @@ postgresql_dbs:
         django_alias: p4
         django_migrate: true
         host: 10.247.164.21
-        pgbouncer_host: 10.247.164.21
         name: commcarehq_p4
         options: {}
         password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+        pgbouncer_host: 10.247.164.21
         port: 6432
         query_stats: false
         shards: [309, 411]
@@ -282,10 +283,10 @@ postgresql_dbs:
         django_alias: p5
         django_migrate: true
         host: 10.247.164.21
-        pgbouncer_host: 10.247.164.21
         name: commcarehq_p5
         options: {}
         password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+        pgbouncer_host: 10.247.164.21
         port: 6432
         query_stats: false
         shards: [412, 514]
@@ -295,10 +296,10 @@ postgresql_dbs:
         django_alias: p6
         django_migrate: true
         host: 10.247.164.20
-        pgbouncer_host: 10.247.164.20
         name: commcarehq_p6
         options: {}
         password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+        pgbouncer_host: 10.247.164.20
         port: 6432
         query_stats: false
         shards: [515, 617]
@@ -308,10 +309,10 @@ postgresql_dbs:
         django_alias: p7
         django_migrate: true
         host: 10.247.164.20
-        pgbouncer_host: 10.247.164.20
         name: commcarehq_p7
         options: {}
         password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+        pgbouncer_host: 10.247.164.20
         port: 6432
         query_stats: false
         shards: [618, 720]
@@ -321,10 +322,10 @@ postgresql_dbs:
         django_alias: p8
         django_migrate: true
         host: 10.247.164.20
-        pgbouncer_host: 10.247.164.20
         name: commcarehq_p8
         options: {}
         password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+        pgbouncer_host: 10.247.164.20
         port: 6432
         query_stats: false
         shards: [721, 823]
@@ -334,10 +335,10 @@ postgresql_dbs:
         django_alias: p9
         django_migrate: true
         host: 10.247.164.64
-        pgbouncer_host: 10.247.164.64
         name: commcarehq_p9
         options: {}
         password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+        pgbouncer_host: 10.247.164.64
         port: 6432
         query_stats: false
         shards: [824, 926]
@@ -347,10 +348,10 @@ postgresql_dbs:
       django_alias: proxy
       django_migrate: true
       host: 10.247.164.56
-      pgbouncer_host: 10.247.164.56
       name: commcarehq_proxy
       options: {}
       password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+      pgbouncer_host: 10.247.164.56
       port: 6432
       query_stats: false
       user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -359,10 +360,10 @@ postgresql_dbs:
     django_alias: null
     django_migrate: true
     host: 10.247.164.25
-    pgbouncer_host: 10.247.164.25
     name: formplayer
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 10.247.164.25
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -371,10 +372,10 @@ postgresql_dbs:
     django_alias: default
     django_migrate: true
     host: 10.247.164.26
-    pgbouncer_host: 10.247.164.26
     name: commcarehq
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 10.247.164.26
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -383,11 +384,11 @@ postgresql_dbs:
     django_alias: icds-ucr-standby1
     django_migrate: false
     host: 10.247.164.24
-    pgbouncer_host: 10.247.164.24
     hq_acceptable_standby_delay: 30
     name: commcarehq_icds_aggregatedata
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 10.247.164.24
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -396,10 +397,10 @@ postgresql_dbs:
     django_alias: synclogs
     django_migrate: true
     host: 10.247.164.70
-    pgbouncer_host: 10.247.164.70
     name: commcarehq_synclogs
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 10.247.164.70
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -408,10 +409,10 @@ postgresql_dbs:
     django_alias: ucr
     django_migrate: false
     host: 10.247.164.25
-    pgbouncer_host: 10.247.164.25
     name: commcarehq_ucr
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 10.247.164.25
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
