--- a/tests/postgresql_config/2018-04-04-softlayer-snapshot/.generated.yml
+++ b/tests/postgresql_config/2018-04-04-softlayer-snapshot/.generated.yml
@@ -1,140 +1,164 @@
 postgresql_dbs:
   all:
-  - create: true
+  - &id001
+    create: true
     django_alias: default
     django_migrate: true
     host: 10.162.36.205
-    pgbouncer_host: 10.162.36.205
     name: commcarehq
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 10.162.36.205
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id002
+    create: true
     django_alias: p1
     django_migrate: true
     host: 10.162.36.205
-    pgbouncer_host: 10.162.36.205
     name: commcarehq_p1
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 10.162.36.205
     port: 6432
     query_stats: false
     shards: [0, 204]
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id003
+    create: true
     django_alias: p2
     django_migrate: true
     host: 10.162.36.205
-    pgbouncer_host: 10.162.36.205
     name: commcarehq_p2
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 10.162.36.205
     port: 6432
     query_stats: false
     shards: [205, 409]
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id004
+    create: true
     django_alias: p3
     django_migrate: true
     host: 10.162.36.205
-    pgbouncer_host: 10.162.36.205
     name: commcarehq_p3
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 10.162.36.205
     port: 6432
     query_stats: false
     shards: [410, 614]
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id005
+    create: true
     django_alias: p4
     django_migrate: true
     host: 10.162.36.205
-    pgbouncer_host: 10.162.36.205
     name: commcarehq_p4
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 10.162.36.205
     port: 6432
     query_stats: false
     shards: [615, 819]
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id006
+    create: true
     django_alias: p5
     django_migrate: true
     host: 10.162.36.205
-    pgbouncer_host: 10.162.36.205
     name: commcarehq_p5
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 10.162.36.205
     port: 6432
     query_stats: false
     shards: [820, 1023]
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id007
+    create: true
     django_alias: proxy
     django_migrate: true
     host: 10.162.36.205
-    pgbouncer_host: 10.162.36.205
     name: commcarehq_proxy
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 10.162.36.205
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id008
+    create: true
     django_alias: synclogs
     django_migrate: true
     host: 10.162.36.205
-    pgbouncer_host: 10.162.36.205
     name: commcarehq_synclogs
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 10.162.36.205
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id009
+    create: true
     django_alias: ucr
     django_migrate: true
     host: 10.162.36.205
-    pgbouncer_host: 10.162.36.205
     name: commcarehq_ucr
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 10.162.36.205
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id010
+    create: true
     django_alias: null
     django_migrate: true
     host: 10.162.36.205
-    pgbouncer_host: 10.162.36.205
     name: formplayer
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 10.162.36.205
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id011
+    create: true
     django_alias: icds-ucr
     django_migrate: true
     host: 10.162.36.205
-    pgbouncer_host: 10.162.36.205
     name: icds-ucr
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 10.162.36.205
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
+  by_host:
+    10.162.36.205:
+    - *id001
+    - *id002
+    - *id003
+    - *id004
+    - *id005
+    - *id006
+    - *id007
+    - *id008
+    - *id009
+    - *id010
+    - *id011
   custom:
   - create: true
     django_alias: icds-ucr
     django_migrate: true
     host: 10.162.36.205
-    pgbouncer_host: 10.162.36.205
     name: icds-ucr
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 10.162.36.205
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -145,10 +169,10 @@ postgresql_dbs:
         django_alias: p1
         django_migrate: true
         host: 10.162.36.205
-        pgbouncer_host: 10.162.36.205
         name: commcarehq_p1
         options: {}
         password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+        pgbouncer_host: 10.162.36.205
         port: 6432
         query_stats: false
         shards: [0, 204]
@@ -158,10 +182,10 @@ postgresql_dbs:
         django_alias: p2
         django_migrate: true
         host: 10.162.36.205
-        pgbouncer_host: 10.162.36.205
         name: commcarehq_p2
         options: {}
         password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+        pgbouncer_host: 10.162.36.205
         port: 6432
         query_stats: false
         shards: [205, 409]
@@ -171,10 +195,10 @@ postgresql_dbs:
         django_alias: p3
         django_migrate: true
         host: 10.162.36.205
-        pgbouncer_host: 10.162.36.205
         name: commcarehq_p3
         options: {}
         password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+        pgbouncer_host: 10.162.36.205
         port: 6432
         query_stats: false
         shards: [410, 614]
@@ -184,10 +208,10 @@ postgresql_dbs:
         django_alias: p4
         django_migrate: true
         host: 10.162.36.205
-        pgbouncer_host: 10.162.36.205
         name: commcarehq_p4
         options: {}
         password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+        pgbouncer_host: 10.162.36.205
         port: 6432
         query_stats: false
         shards: [615, 819]
@@ -197,10 +221,10 @@ postgresql_dbs:
         django_alias: p5
         django_migrate: true
         host: 10.162.36.205
-        pgbouncer_host: 10.162.36.205
         name: commcarehq_p5
         options: {}
         password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+        pgbouncer_host: 10.162.36.205
         port: 6432
         query_stats: false
         shards: [820, 1023]
@@ -210,10 +234,10 @@ postgresql_dbs:
       django_alias: proxy
       django_migrate: true
       host: 10.162.36.205
-      pgbouncer_host: 10.162.36.205
       name: commcarehq_proxy
       options: {}
       password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+      pgbouncer_host: 10.162.36.205
       port: 6432
       query_stats: false
       user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -222,10 +246,10 @@ postgresql_dbs:
     django_alias: null
     django_migrate: true
     host: 10.162.36.205
-    pgbouncer_host: 10.162.36.205
     name: formplayer
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 10.162.36.205
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -234,10 +258,10 @@ postgresql_dbs:
     django_alias: default
     django_migrate: true
     host: 10.162.36.205
-    pgbouncer_host: 10.162.36.205
     name: commcarehq
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 10.162.36.205
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -247,10 +271,10 @@ postgresql_dbs:
     django_alias: synclogs
     django_migrate: true
     host: 10.162.36.205
-    pgbouncer_host: 10.162.36.205
     name: commcarehq_synclogs
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 10.162.36.205
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -259,10 +283,10 @@ postgresql_dbs:
     django_alias: ucr
     django_migrate: true
     host: 10.162.36.205
-    pgbouncer_host: 10.162.36.205
     name: commcarehq_ucr
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: 10.162.36.205
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
