--- a/tests/postgresql_config/2018-04-04-staging-snapshot/.generated.yml
+++ b/tests/postgresql_config/2018-04-04-staging-snapshot/.generated.yml
@@ -1,120 +1,142 @@
 postgresql_dbs:
   all:
-  - create: true
+  - &id001
+    create: true
     django_alias: default
     django_migrate: true
     host: hqdb1-staging.internal-va.commcarehq.org
-    pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
     name: commcarehq
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
     port: 6432
     query_stats: true
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id002
+    create: true
     django_alias: p1
     django_migrate: true
     host: hqdb1-staging.internal-va.commcarehq.org
-    pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
     name: commcarehq_p1
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
     port: 6432
     query_stats: true
     shards: [0, 99]
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id003
+    create: true
     django_alias: p2
     django_migrate: true
     host: hqdb1-staging.internal-va.commcarehq.org
-    pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
     name: commcarehq_p2
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
     port: 6432
     query_stats: true
     shards: [100, 199]
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id004
+    create: true
     django_alias: p3
     django_migrate: true
     host: hqdb1-staging.internal-va.commcarehq.org
-    pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
     name: commcarehq_p3
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
     port: 6432
     query_stats: true
     shards: [200, 299]
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id005
+    create: true
     django_alias: p4
     django_migrate: true
     host: hqdb1-staging.internal-va.commcarehq.org
-    pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
     name: commcarehq_p4
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
     port: 6432
     query_stats: true
     shards: [300, 399]
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id006
+    create: true
     django_alias: p5
     django_migrate: true
     host: hqdb1-staging.internal-va.commcarehq.org
-    pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
     name: commcarehq_p5
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
     port: 6432
     query_stats: true
     shards: [400, 511]
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id007
+    create: true
     django_alias: proxy
     django_migrate: true
     host: hqdb1-staging.internal-va.commcarehq.org
-    pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
     name: commcarehq_proxy
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id008
+    create: true
     django_alias: synclogs
     django_migrate: true
     host: hqdb1-staging.internal-va.commcarehq.org
-    pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
     name: commcarehq_synclogs
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id009
+    create: true
     django_alias: ucr
     django_migrate: false
     host: hqdb1-staging.internal-va.commcarehq.org
-    pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
     name: commcarehq_ucr
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
     port: 6432
     query_stats: true
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id010
+    create: true
     django_alias: null
     django_migrate: true
     host: hqdb1-staging.internal-va.commcarehq.org
-    pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
     name: formplayer
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
+  by_host:
+    hqdb1-staging.internal-va.commcarehq.org:
+    - *id001
+    - *id002
+    - *id003
+    - *id004
+    - *id005
+    - *id006
+    - *id007
+    - *id008
+    - *id009
+    - *id010
   custom: []
   form_processing:
     partitions:
@@ -123,10 +145,10 @@ postgresql_dbs:
         django_alias: p1
         django_migrate: true
         host: hqdb1-staging.internal-va.commcarehq.org
-        pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
         name: commcarehq_p1
         options: {}
         password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+        pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
         port: 6432
         query_stats: true
         shards: [0, 99]
@@ -136,10 +158,10 @@ postgresql_dbs:
         django_alias: p2
         django_migrate: true
         host: hqdb1-staging.internal-va.commcarehq.org
-        pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
         name: commcarehq_p2
         options: {}
         password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+        pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
         port: 6432
         query_stats: true
         shards: [100, 199]
@@ -149,10 +171,10 @@ postgresql_dbs:
         django_alias: p3
         django_migrate: true
         host: hqdb1-staging.internal-va.commcarehq.org
-        pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
         name: commcarehq_p3
         options: {}
         password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+        pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
         port: 6432
         query_stats: true
         shards: [200, 299]
@@ -162,10 +184,10 @@ postgresql_dbs:
         django_alias: p4
         django_migrate: true
         host: hqdb1-staging.internal-va.commcarehq.org
-        pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
         name: commcarehq_p4
         options: {}
         password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+        pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
         port: 6432
         query_stats: true
         shards: [300, 399]
@@ -175,10 +197,10 @@ postgresql_dbs:
         django_alias: p5
         django_migrate: true
         host: hqdb1-staging.internal-va.commcarehq.org
-        pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
         name: commcarehq_p5
         options: {}
         password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+        pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
         port: 6432
         query_stats: true
         shards: [400, 511]
@@ -188,10 +210,10 @@ postgresql_dbs:
       django_alias: proxy
       django_migrate: true
       host: hqdb1-staging.internal-va.commcarehq.org
-      pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
       name: commcarehq_proxy
       options: {}
       password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+      pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
       port: 6432
       query_stats: false
       user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -200,10 +222,10 @@ postgresql_dbs:
     django_alias: null
     django_migrate: true
     host: hqdb1-staging.internal-va.commcarehq.org
-    pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
     name: formplayer
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -212,10 +234,10 @@ postgresql_dbs:
     django_alias: default
     django_migrate: true
     host: hqdb1-staging.internal-va.commcarehq.org
-    pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
     name: commcarehq
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
     port: 6432
     query_stats: true
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -225,10 +247,10 @@ postgresql_dbs:
     django_alias: synclogs
     django_migrate: true
     host: hqdb1-staging.internal-va.commcarehq.org
-    pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
     name: commcarehq_synclogs
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -237,10 +259,10 @@ postgresql_dbs:
     django_alias: ucr
     django_migrate: false
     host: hqdb1-staging.internal-va.commcarehq.org
-    pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
     name: commcarehq_ucr
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
     port: 6432
     query_stats: true
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
