update postgres config for ucr DBs
max_connections = 350
shared_buffers = 20GB
effective_cache_size = 60GB
maintenance_work_mem = 2GB
checkpoint_completion_target = 0.9
wal_buffers = 16MB
default_statistics_target = 500
random_page_cost = 1.1
effective_io_concurrency = 200
work_mem = 1872kB
min_wal_size = 4GB
max_wal_size = 8GB
max_worker_processes = 32
max_parallel_workers_per_gather = 16

--- a/src/commcare_cloud/ansible/roles/postgresql_base/defaults/main.yml
+++ b/src/commcare_cloud/ansible/roles/postgresql_base/defaults/main.yml
@@ -29,9 +29,13 @@ postgresql_maintenance_work_mem: '64MB'
 postgresql_checkpoint_completion_target: '0.5'
 postgresql_wal_buffers: '-1'
 postgresql_default_statistics_target: '100'
+postgresql_min_wal_size: ~
 postgresql_max_wal_size: '256MB'
 postgresql_slow_log_threshold: 300
 postgresql_random_page_cost: 4.0
+postgresql_max_worker_processes: ~
+postgresql_max_parallel_workers_per_gather: ~
+postgresql_effective_io_concurrency: ~
 
 allow_direct_postgresql_access: no
 allow_direct_citusdb_access: no
