--- a/tests/postgresql_config/2018-04-04-icds-new-snapshot/.generated.yml
+++ b/tests/postgresql_config/2018-04-04-icds-new-snapshot/.generated.yml
@@ -1,6 +1,7 @@
 postgresql_dbs:
   all:
-  - create: true
+  - &id013
+    create: true
     django_alias: default
     django_migrate: true
     host: 10.247.164.26
@@ -11,7 +12,8 @@ postgresql_dbs:
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id009
+    create: true
     django_alias: icds-ucr
     django_migrate: true
     host: 10.247.164.25
@@ -34,7 +36,8 @@ postgresql_dbs:
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id018
+    create: true
     django_alias: p1
     django_migrate: true
     host: 10.247.164.66
@@ -46,7 +49,8 @@ postgresql_dbs:
     query_stats: false
     shards: [0, 103]
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id016
+    create: true
     django_alias: p10
     django_migrate: true
     host: 10.247.164.64
@@ -58,7 +62,8 @@ postgresql_dbs:
     query_stats: false
     shards: [927, 1023]
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id019
+    create: true
     django_alias: p2
     django_migrate: true
     host: 10.247.164.66
@@ -70,7 +75,8 @@ postgresql_dbs:
     query_stats: false
     shards: [104, 205]
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id004
+    create: true
     django_alias: p3
     django_migrate: true
     host: 10.247.164.21
@@ -82,7 +88,8 @@ postgresql_dbs:
     query_stats: false
     shards: [206, 308]
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id005
+    create: true
     django_alias: p4
     django_migrate: true
     host: 10.247.164.21
@@ -94,7 +101,8 @@ postgresql_dbs:
     query_stats: false
     shards: [309, 411]
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id006
+    create: true
     django_alias: p5
     django_migrate: true
     host: 10.247.164.21
@@ -106,7 +114,8 @@ postgresql_dbs:
     query_stats: false
     shards: [412, 514]
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id001
+    create: true
     django_alias: p6
     django_migrate: true
     host: 10.247.164.20
@@ -118,7 +127,8 @@ postgresql_dbs:
     query_stats: false
     shards: [515, 617]
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id002
+    create: true
     django_alias: p7
     django_migrate: true
     host: 10.247.164.20
@@ -130,7 +140,8 @@ postgresql_dbs:
     query_stats: false
     shards: [618, 720]
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id003
+    create: true
     django_alias: p8
     django_migrate: true
     host: 10.247.164.20
@@ -142,7 +153,8 @@ postgresql_dbs:
     query_stats: false
     shards: [721, 823]
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id017
+    create: true
     django_alias: p9
     django_migrate: true
     host: 10.247.164.64
@@ -154,7 +166,8 @@ postgresql_dbs:
     query_stats: false
     shards: [824, 926]
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id015
+    create: true
     django_alias: proxy
     django_migrate: true
     host: 10.247.164.56
@@ -165,7 +178,8 @@ postgresql_dbs:
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id023
+    create: true
     django_alias: synclogs
     django_migrate: true
     host: 10.247.164.70
@@ -176,7 +190,8 @@ postgresql_dbs:
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id010
+    create: true
     django_alias: ucr
     django_migrate: false
     host: 10.247.164.25
@@ -187,7 +202,8 @@ postgresql_dbs:
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  - create: true
+  - &id011
+    create: true
     django_alias: null
     django_migrate: true
     host: 10.247.164.25
@@ -198,7 +214,40 @@ postgresql_dbs:
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
-  by_host: {}
+  by_host:
+    10.247.164.20: &id007
+    - *id001
+    - *id002
+    - *id003
+    10.247.164.21: &id008
+    - *id004
+    - *id005
+    - *id006
+    10.247.164.22: *id007
+    10.247.164.23: *id008
+    10.247.164.24: &id012
+    - *id009
+    - *id010
+    - *id011
+    10.247.164.25: *id012
+    10.247.164.26: &id014
+    - *id013
+    10.247.164.27: *id014
+    10.247.164.56:
+    - *id015
+    10.247.164.64: &id022
+    - *id016
+    - *id017
+    10.247.164.65: &id020 []
+    10.247.164.66: &id021
+    - *id018
+    - *id019
+    10.247.164.67: *id020
+    10.247.164.68: *id021
+    10.247.164.69: *id022
+    10.247.164.70:
+    - *id023
+    10.247.164.99: *id012
   custom:
   - create: true
     django_alias: icds-ucr
