--- a/environments/india/postgresql.yml
+++ b/environments/india/postgresql.yml
@@ -14,6 +14,11 @@ pgbouncer_override:
 
 postgres_override:
   postgresql_max_connections: 300
+  postgresql_hba_entries:  # required for backup
+    - contype: host
+      databases: replication
+      users: replication
+      netmask: 0.0.0.0/0
 
 dbs:
   form_processing:
