--- a/src/commcare_cloud/ansible/roles/postgresql_base/defaults/main.yml
+++ b/src/commcare_cloud/ansible/roles/postgresql_base/defaults/main.yml
@@ -42,3 +42,4 @@ postgresql_binary: "postgresql-{{ postgresql_version }}"
 
 postgresql_shared_preload_libraries:
  - 'pg_stat_statements'
+postgresql_hba_entries: []
