--- a/src/commcare_cloud/ansible/deploy_citusdb.yml
+++ b/src/commcare_cloud/ansible/deploy_citusdb.yml
@@ -21,7 +21,7 @@
   hosts: citusdb_cordinator
   become: true
   roles:
-    - {role: pgbouncer, tags: 'citusdb_cordinator'}
+    - {role: pgbouncer, tags: 'pgbouncer'}
 
 
 # Disables transparent huge pages (THP)
