--- a/environments/staging/postgresql.yml
+++ b/environments/staging/postgresql.yml
@@ -5,7 +5,7 @@ postgres_override:
   postgresql_hba_entries:  # required for backup
     - contype: host
       databases: replication
-      users: replication
+      users: hqrepl
       netmask: 0.0.0.0/0
 
 pgbouncer_override:
