Add new aws india servers to inventory

--- a/environments/india/inventory.ini
+++ b/environments/india/inventory.ini
@@ -1,3 +1,44 @@
+[control0]
+10.203.10.246 hostname=control0-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
+[djangomanage0]
+10.203.10.37 hostname=djangomanage0-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
+[web0]
+10.203.10.48 hostname=web0-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
+[web1]
+10.203.10.146 hostname=web1-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
+[citus0]
+10.203.10.77 hostname=citus0-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
+[citus1]
+10.203.10.74 hostname=citus1-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
+[citus2]
+10.203.10.190 hostname=citus2-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
+[airflow1]
+10.203.10.63 hostname=airflow1-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
+[celery1]
+10.203.10.13 hostname=celery1-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
+[couch2]
+10.203.40.122 hostname=couch2-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
+[couch3]
+10.203.40.114 hostname=couch3-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
+[couch4]
+10.203.40.189 hostname=couch4-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
+[redis0]
+10.203.40.128 hostname=redis0-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
+[es0]
+10.203.40.175 hostname=es0-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
+[es1]
+10.203.40.142 hostname=es1-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
+[formplayer1]
+10.203.10.208 hostname=formplayer1-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
+[pillow2]
+10.203.10.9 hostname=pillow2-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
+[kafka0]
+10.203.40.207 hostname=kafka0-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
+[proxy1]
+10.203.20.59 hostname=proxy1-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3 public_ip=13.234.163.136
+[rds_pgmain0]
+pgmain0-india.ccqpd1xrju8m.ap-south-1.rds.amazonaws.com
+
 [celery0]
 10.162.36.233 hostname="celery0.india.commcarehq.org" encrypted_root=/opt/tmp
 
@@ -11,18 +52,6 @@ datavol_device='/dev/mapper/consolidated-data'
 
 [django1]
 10.162.36.231 hostname="django1.india.commcarehq.org"
-
-[web0]
-10.203.10.48 hostname=web0-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
-[web1]
-10.203.10.146 hostname=web1-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
-
-[citus0]
-10.203.10.77 hostname=citus0-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
-[citus1]
-10.203.10.74 hostname=citus1-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
-[citus2]
-10.203.10.190 hostname=citus2-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
 
 [citusdb_worker:children]
 citus1
@@ -61,9 +90,6 @@ datavol_device=/dev/xvdc
 
 [proxy0]
 10.162.36.203 hostname="proxy0.india.commcarehq.org"
-
-[proxy1]
-10.203.20.59 hostname=proxy1-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3 public_ip=13.234.163.136
 
 [formplayer0]
 10.162.36.248 hostname="formplayer0.india.commcarehq.org" encrypted_root=/opt/data/ecrypt
@@ -169,17 +195,11 @@ couch1
 couch_big_nodes
 celery0
 
-[control0]
-10.203.10.246 hostname=control0-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
-
 [control_sl]
 10.162.36.196 hostname="control.india.commcarehq.org"
 
 [control:children]
 control0
-
-[djangomanage0]
-10.203.10.37 hostname=djangomanage0-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
 
 [django_manage:children]
 djangomanage0
