--- a/environments/india/aws-resources.yml
+++ b/environments/india/aws-resources.yml
@@ -1,10 +1,22 @@
+airflow1-india: 10.203.10.63
+celery1-india: 10.203.10.13
 citus0-india: 10.203.10.77
 citus1-india: 10.203.10.74
 citus2-india: 10.203.10.190
 control0-india: 10.203.10.246
+couch2-india: 10.203.40.122
+couch3-india: 10.203.40.114
+couch4-india: 10.203.40.189
 djangomanage0-india: 10.203.10.37
+es0-india: 10.203.40.175
+es1-india: 10.203.40.142
+formplayer1-india: 10.203.10.208
+kafka0-india: 10.203.40.207
+pgmain0-india: pgmain0-india.ccqpd1xrju8m.ap-south-1.rds.amazonaws.com
+pillow2-india: 10.203.10.9
 proxy1-india: 10.203.20.59
 proxy1-india.public_ip: 13.234.163.136
+redis0-india: 10.203.40.128
 vpn-india: 10.203.20.132
 vpn-india.public_ip: 13.127.238.159
 web0-india: 10.203.10.48
