--- a/environments/india/inventory.ini
+++ b/environments/india/inventory.ini
@@ -34,6 +34,8 @@
 10.203.10.9 hostname=pillow2-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
 [kafka0]
 10.203.40.207 hostname=kafka0-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
+[pgbouncer0]
+10.203.40.199 hostname=pgbouncer0-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3
 [proxy1]
 10.203.20.59 hostname=proxy1-india ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3 public_ip=13.234.163.136
 [rds_pgmain0]
