Make sure rabbit is running before we try to configure it

--- a/src/commcare_cloud/ansible/roles/rabbitmq/tasks/main.yml
+++ b/src/commcare_cloud/ansible/roles/rabbitmq/tasks/main.yml
@@ -17,6 +17,10 @@
     owner: rabbitmq
     mode: 0644
 
+- name: Make sure RabbitMQ service is started before running config tasks
+  become: yes
+  service: name=rabbitmq-server state=started
+
 - include: config-cluster.yml
   when: rabbitmq_create_cluster
 
