--- a/tests/postgresql_config/2018-04-04-development-snapshot/.generated.yml
+++ b/tests/postgresql_config/2018-04-04-development-snapshot/.generated.yml
@@ -4,10 +4,11 @@ postgresql_dbs:
     django_alias: default
     django_migrate: true
     host: 192.168.33.16
-    pgbouncer_host: 192.168.33.16
     name: commcarehq
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: 192.168.33.16
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -15,10 +16,11 @@ postgresql_dbs:
     django_alias: ucr
     django_migrate: false
     host: 192.168.33.16
-    pgbouncer_host: 192.168.33.16
     name: commcarehq_ucr
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: 192.168.33.16
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -26,10 +28,11 @@ postgresql_dbs:
     django_alias: null
     django_migrate: true
     host: 192.168.33.16
-    pgbouncer_host: 192.168.33.16
     name: formplayer
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: 192.168.33.16
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -40,10 +43,11 @@ postgresql_dbs:
     django_alias: null
     django_migrate: true
     host: 192.168.33.16
-    pgbouncer_host: 192.168.33.16
     name: formplayer
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: 192.168.33.16
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -52,10 +56,11 @@ postgresql_dbs:
     django_alias: default
     django_migrate: true
     host: 192.168.33.16
-    pgbouncer_host: 192.168.33.16
     name: commcarehq
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: 192.168.33.16
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -66,10 +71,11 @@ postgresql_dbs:
     django_alias: ucr
     django_migrate: false
     host: 192.168.33.16
-    pgbouncer_host: 192.168.33.16
     name: commcarehq_ucr
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: 192.168.33.16
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
