--- a/tests/postgresql_config/2018-04-04-icds-new-snapshot/.generated.yml
+++ b/tests/postgresql_config/2018-04-04-icds-new-snapshot/.generated.yml
@@ -4,10 +4,11 @@ postgresql_dbs:
     django_alias: default
     django_migrate: true
     host: 10.247.164.26
-    pgbouncer_host: 10.247.164.26
     name: commcarehq
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: 10.247.164.26
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -15,10 +16,11 @@ postgresql_dbs:
     django_alias: icds-ucr
     django_migrate: true
     host: 10.247.164.25
-    pgbouncer_host: 10.247.164.25
     name: commcarehq_icds_aggregatedata
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: 10.247.164.25
     port: 6432
     query_stats: true
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -26,11 +28,12 @@ postgresql_dbs:
     django_alias: icds-ucr-standby1
     django_migrate: false
     host: 10.247.164.24
-    pgbouncer_host: 10.247.164.24
     hq_acceptable_standby_delay: 30
     name: commcarehq_icds_aggregatedata
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: 10.247.164.24
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -38,130 +41,161 @@ postgresql_dbs:
     django_alias: p1
     django_migrate: true
     host: 10.247.164.66
-    pgbouncer_host: 10.247.164.66
     name: commcarehq_p1
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: 10.247.164.66
     port: 6432
     query_stats: false
-    shards: [0, 103]
+    shards:
+    - 0
+    - 103
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   - create: true
     django_alias: p10
     django_migrate: true
     host: 10.247.164.64
-    pgbouncer_host: 10.247.164.64
     name: commcarehq_p10
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: 10.247.164.64
     port: 6432
     query_stats: false
-    shards: [927, 1023]
+    shards:
+    - 927
+    - 1023
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   - create: true
     django_alias: p2
     django_migrate: true
     host: 10.247.164.66
-    pgbouncer_host: 10.247.164.66
     name: commcarehq_p2
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: 10.247.164.66
     port: 6432
     query_stats: false
-    shards: [104, 205]
+    shards:
+    - 104
+    - 205
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   - create: true
     django_alias: p3
     django_migrate: true
     host: 10.247.164.21
-    pgbouncer_host: 10.247.164.21
     name: commcarehq_p3
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: 10.247.164.21
     port: 6432
     query_stats: false
-    shards: [206, 308]
+    shards:
+    - 206
+    - 308
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   - create: true
     django_alias: p4
     django_migrate: true
     host: 10.247.164.21
-    pgbouncer_host: 10.247.164.21
     name: commcarehq_p4
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: 10.247.164.21
     port: 6432
     query_stats: false
-    shards: [309, 411]
+    shards:
+    - 309
+    - 411
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   - create: true
     django_alias: p5
     django_migrate: true
     host: 10.247.164.21
-    pgbouncer_host: 10.247.164.21
     name: commcarehq_p5
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: 10.247.164.21
     port: 6432
     query_stats: false
-    shards: [412, 514]
+    shards:
+    - 412
+    - 514
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   - create: true
     django_alias: p6
     django_migrate: true
     host: 10.247.164.20
-    pgbouncer_host: 10.247.164.20
     name: commcarehq_p6
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: 10.247.164.20
     port: 6432
     query_stats: false
-    shards: [515, 617]
+    shards:
+    - 515
+    - 617
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   - create: true
     django_alias: p7
     django_migrate: true
     host: 10.247.164.20
-    pgbouncer_host: 10.247.164.20
     name: commcarehq_p7
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: 10.247.164.20
     port: 6432
     query_stats: false
-    shards: [618, 720]
+    shards:
+    - 618
+    - 720
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   - create: true
     django_alias: p8
     django_migrate: true
     host: 10.247.164.20
-    pgbouncer_host: 10.247.164.20
     name: commcarehq_p8
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: 10.247.164.20
     port: 6432
     query_stats: false
-    shards: [721, 823]
+    shards:
+    - 721
+    - 823
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   - create: true
     django_alias: p9
     django_migrate: true
     host: 10.247.164.64
-    pgbouncer_host: 10.247.164.64
     name: commcarehq_p9
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: 10.247.164.64
     port: 6432
     query_stats: false
-    shards: [824, 926]
+    shards:
+    - 824
+    - 926
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   - create: true
     django_alias: proxy
     django_migrate: true
     host: 10.247.164.56
-    pgbouncer_host: 10.247.164.56
     name: commcarehq_proxy
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: 10.247.164.56
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -169,10 +203,11 @@ postgresql_dbs:
     django_alias: synclogs
     django_migrate: true
     host: 10.247.164.70
-    pgbouncer_host: 10.247.164.70
     name: commcarehq_synclogs
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: 10.247.164.70
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -180,10 +215,11 @@ postgresql_dbs:
     django_alias: ucr
     django_migrate: false
     host: 10.247.164.25
-    pgbouncer_host: 10.247.164.25
     name: commcarehq_ucr
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: 10.247.164.25
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -191,10 +227,11 @@ postgresql_dbs:
     django_alias: null
     django_migrate: true
     host: 10.247.164.25
-    pgbouncer_host: 10.247.164.25
     name: formplayer
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: 10.247.164.25
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -203,10 +240,11 @@ postgresql_dbs:
     django_alias: icds-ucr
     django_migrate: true
     host: 10.247.164.25
-    pgbouncer_host: 10.247.164.25
     name: commcarehq_icds_aggregatedata
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: 10.247.164.25
     port: 6432
     query_stats: true
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -217,140 +255,171 @@ postgresql_dbs:
         django_alias: p1
         django_migrate: true
         host: 10.247.164.66
-        pgbouncer_host: 10.247.164.66
         name: commcarehq_p1
         options: {}
         password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+        pg_config: []
+        pgbouncer_host: 10.247.164.66
         port: 6432
         query_stats: false
-        shards: [0, 103]
+        shards:
+        - 0
+        - 103
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p10:
         create: true
         django_alias: p10
         django_migrate: true
         host: 10.247.164.64
-        pgbouncer_host: 10.247.164.64
         name: commcarehq_p10
         options: {}
         password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+        pg_config: []
+        pgbouncer_host: 10.247.164.64
         port: 6432
         query_stats: false
-        shards: [927, 1023]
+        shards:
+        - 927
+        - 1023
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p2:
         create: true
         django_alias: p2
         django_migrate: true
         host: 10.247.164.66
-        pgbouncer_host: 10.247.164.66
         name: commcarehq_p2
         options: {}
         password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+        pg_config: []
+        pgbouncer_host: 10.247.164.66
         port: 6432
         query_stats: false
-        shards: [104, 205]
+        shards:
+        - 104
+        - 205
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p3:
         create: true
         django_alias: p3
         django_migrate: true
         host: 10.247.164.21
-        pgbouncer_host: 10.247.164.21
         name: commcarehq_p3
         options: {}
         password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+        pg_config: []
+        pgbouncer_host: 10.247.164.21
         port: 6432
         query_stats: false
-        shards: [206, 308]
+        shards:
+        - 206
+        - 308
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p4:
         create: true
         django_alias: p4
         django_migrate: true
         host: 10.247.164.21
-        pgbouncer_host: 10.247.164.21
         name: commcarehq_p4
         options: {}
         password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+        pg_config: []
+        pgbouncer_host: 10.247.164.21
         port: 6432
         query_stats: false
-        shards: [309, 411]
+        shards:
+        - 309
+        - 411
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p5:
         create: true
         django_alias: p5
         django_migrate: true
         host: 10.247.164.21
-        pgbouncer_host: 10.247.164.21
         name: commcarehq_p5
         options: {}
         password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+        pg_config: []
+        pgbouncer_host: 10.247.164.21
         port: 6432
         query_stats: false
-        shards: [412, 514]
+        shards:
+        - 412
+        - 514
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p6:
         create: true
         django_alias: p6
         django_migrate: true
         host: 10.247.164.20
-        pgbouncer_host: 10.247.164.20
         name: commcarehq_p6
         options: {}
         password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+        pg_config: []
+        pgbouncer_host: 10.247.164.20
         port: 6432
         query_stats: false
-        shards: [515, 617]
+        shards:
+        - 515
+        - 617
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p7:
         create: true
         django_alias: p7
         django_migrate: true
         host: 10.247.164.20
-        pgbouncer_host: 10.247.164.20
         name: commcarehq_p7
         options: {}
         password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+        pg_config: []
+        pgbouncer_host: 10.247.164.20
         port: 6432
         query_stats: false
-        shards: [618, 720]
+        shards:
+        - 618
+        - 720
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p8:
         create: true
         django_alias: p8
         django_migrate: true
         host: 10.247.164.20
-        pgbouncer_host: 10.247.164.20
         name: commcarehq_p8
         options: {}
         password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+        pg_config: []
+        pgbouncer_host: 10.247.164.20
         port: 6432
         query_stats: false
-        shards: [721, 823]
+        shards:
+        - 721
+        - 823
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p9:
         create: true
         django_alias: p9
         django_migrate: true
         host: 10.247.164.64
-        pgbouncer_host: 10.247.164.64
         name: commcarehq_p9
         options: {}
         password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+        pg_config: []
+        pgbouncer_host: 10.247.164.64
         port: 6432
         query_stats: false
-        shards: [824, 926]
+        shards:
+        - 824
+        - 926
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
     proxy:
       create: true
       django_alias: proxy
       django_migrate: true
       host: 10.247.164.56
-      pgbouncer_host: 10.247.164.56
       name: commcarehq_proxy
       options: {}
       password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+      pg_config: []
+      pgbouncer_host: 10.247.164.56
       port: 6432
       query_stats: false
       user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -359,10 +428,11 @@ postgresql_dbs:
     django_alias: null
     django_migrate: true
     host: 10.247.164.25
-    pgbouncer_host: 10.247.164.25
     name: formplayer
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: 10.247.164.25
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -371,10 +441,11 @@ postgresql_dbs:
     django_alias: default
     django_migrate: true
     host: 10.247.164.26
-    pgbouncer_host: 10.247.164.26
     name: commcarehq
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: 10.247.164.26
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -383,11 +454,12 @@ postgresql_dbs:
     django_alias: icds-ucr-standby1
     django_migrate: false
     host: 10.247.164.24
-    pgbouncer_host: 10.247.164.24
     hq_acceptable_standby_delay: 30
     name: commcarehq_icds_aggregatedata
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: 10.247.164.24
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -396,10 +468,11 @@ postgresql_dbs:
     django_alias: synclogs
     django_migrate: true
     host: 10.247.164.70
-    pgbouncer_host: 10.247.164.70
     name: commcarehq_synclogs
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: 10.247.164.70
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -408,10 +481,11 @@ postgresql_dbs:
     django_alias: ucr
     django_migrate: false
     host: 10.247.164.25
-    pgbouncer_host: 10.247.164.25
     name: commcarehq_ucr
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: 10.247.164.25
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
