--- a/tests/postgresql_config/2018-04-04-production-snapshot/.generated.yml
+++ b/tests/postgresql_config/2018-04-04-production-snapshot/.generated.yml
@@ -4,10 +4,11 @@ postgresql_dbs:
     django_alias: default
     django_migrate: true
     host: hqdb0.internal-va.commcarehq.org
-    pgbouncer_host: hqdb0.internal-va.commcarehq.org
     name: commcarehq
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: hqdb0.internal-va.commcarehq.org
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -15,70 +16,86 @@ postgresql_dbs:
     django_alias: p1
     django_migrate: true
     host: hqdb1.internal-va.commcarehq.org
-    pgbouncer_host: hqdb1.internal-va.commcarehq.org
     name: commcarehq_p1
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: hqdb1.internal-va.commcarehq.org
     port: 6432
     query_stats: false
-    shards: [0, 204]
+    shards:
+    - 0
+    - 204
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   - create: true
     django_alias: p2
     django_migrate: true
     host: hqdb1.internal-va.commcarehq.org
-    pgbouncer_host: hqdb1.internal-va.commcarehq.org
     name: commcarehq_p2
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: hqdb1.internal-va.commcarehq.org
     port: 6432
     query_stats: false
-    shards: [205, 409]
+    shards:
+    - 205
+    - 409
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   - create: true
     django_alias: p3
     django_migrate: true
     host: hqdb2.internal-va.commcarehq.org
-    pgbouncer_host: hqdb2.internal-va.commcarehq.org
     name: commcarehq_p3
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: hqdb2.internal-va.commcarehq.org
     port: 6432
     query_stats: false
-    shards: [410, 614]
+    shards:
+    - 410
+    - 614
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   - create: true
     django_alias: p4
     django_migrate: true
     host: hqdb2.internal-va.commcarehq.org
-    pgbouncer_host: hqdb2.internal-va.commcarehq.org
     name: commcarehq_p4
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: hqdb2.internal-va.commcarehq.org
     port: 6432
     query_stats: false
-    shards: [615, 819]
+    shards:
+    - 615
+    - 819
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   - create: true
     django_alias: p5
     django_migrate: true
     host: hqdb2.internal-va.commcarehq.org
-    pgbouncer_host: hqdb2.internal-va.commcarehq.org
     name: commcarehq_p5
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: hqdb2.internal-va.commcarehq.org
     port: 6432
     query_stats: false
-    shards: [820, 1023]
+    shards:
+    - 820
+    - 1023
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   - create: true
     django_alias: proxy
     django_migrate: true
     host: hqdb1.internal-va.commcarehq.org
-    pgbouncer_host: hqdb1.internal-va.commcarehq.org
     name: commcarehq_proxy
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: hqdb1.internal-va.commcarehq.org
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -86,10 +103,11 @@ postgresql_dbs:
     django_alias: synclogs
     django_migrate: true
     host: pgsynclog.internal-va.commcarehq.org
-    pgbouncer_host: pgsynclog.internal-va.commcarehq.org
     name: commcarehq_synclogs
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: pgsynclog.internal-va.commcarehq.org
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -97,10 +115,11 @@ postgresql_dbs:
     django_alias: ucr
     django_migrate: false
     host: hqdb0.internal-va.commcarehq.org
-    pgbouncer_host: hqdb0.internal-va.commcarehq.org
     name: commcarehq_ucr
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: hqdb0.internal-va.commcarehq.org
     port: 6432
     query_stats: true
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -108,10 +127,11 @@ postgresql_dbs:
     django_alias: null
     django_migrate: true
     host: hqdb0.internal-va.commcarehq.org
-    pgbouncer_host: hqdb0.internal-va.commcarehq.org
     name: formplayer
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: hqdb0.internal-va.commcarehq.org
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -123,75 +143,91 @@ postgresql_dbs:
         django_alias: p1
         django_migrate: true
         host: hqdb1.internal-va.commcarehq.org
-        pgbouncer_host: hqdb1.internal-va.commcarehq.org
         name: commcarehq_p1
         options: {}
         password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+        pg_config: []
+        pgbouncer_host: hqdb1.internal-va.commcarehq.org
         port: 6432
         query_stats: false
-        shards: [0, 204]
+        shards:
+        - 0
+        - 204
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p2:
         create: true
         django_alias: p2
         django_migrate: true
         host: hqdb1.internal-va.commcarehq.org
-        pgbouncer_host: hqdb1.internal-va.commcarehq.org
         name: commcarehq_p2
         options: {}
         password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+        pg_config: []
+        pgbouncer_host: hqdb1.internal-va.commcarehq.org
         port: 6432
         query_stats: false
-        shards: [205, 409]
+        shards:
+        - 205
+        - 409
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p3:
         create: true
         django_alias: p3
         django_migrate: true
         host: hqdb2.internal-va.commcarehq.org
-        pgbouncer_host: hqdb2.internal-va.commcarehq.org
         name: commcarehq_p3
         options: {}
         password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+        pg_config: []
+        pgbouncer_host: hqdb2.internal-va.commcarehq.org
         port: 6432
         query_stats: false
-        shards: [410, 614]
+        shards:
+        - 410
+        - 614
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p4:
         create: true
         django_alias: p4
         django_migrate: true
         host: hqdb2.internal-va.commcarehq.org
-        pgbouncer_host: hqdb2.internal-va.commcarehq.org
         name: commcarehq_p4
         options: {}
         password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+        pg_config: []
+        pgbouncer_host: hqdb2.internal-va.commcarehq.org
         port: 6432
         query_stats: false
-        shards: [615, 819]
+        shards:
+        - 615
+        - 819
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p5:
         create: true
         django_alias: p5
         django_migrate: true
         host: hqdb2.internal-va.commcarehq.org
-        pgbouncer_host: hqdb2.internal-va.commcarehq.org
         name: commcarehq_p5
         options: {}
         password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+        pg_config: []
+        pgbouncer_host: hqdb2.internal-va.commcarehq.org
         port: 6432
         query_stats: false
-        shards: [820, 1023]
+        shards:
+        - 820
+        - 1023
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
     proxy:
       create: true
       django_alias: proxy
       django_migrate: true
       host: hqdb1.internal-va.commcarehq.org
-      pgbouncer_host: hqdb1.internal-va.commcarehq.org
       name: commcarehq_proxy
       options: {}
       password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+      pg_config: []
+      pgbouncer_host: hqdb1.internal-va.commcarehq.org
       port: 6432
       query_stats: false
       user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -200,10 +236,11 @@ postgresql_dbs:
     django_alias: null
     django_migrate: true
     host: hqdb0.internal-va.commcarehq.org
-    pgbouncer_host: hqdb0.internal-va.commcarehq.org
     name: formplayer
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: hqdb0.internal-va.commcarehq.org
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -212,10 +249,11 @@ postgresql_dbs:
     django_alias: default
     django_migrate: true
     host: hqdb0.internal-va.commcarehq.org
-    pgbouncer_host: hqdb0.internal-va.commcarehq.org
     name: commcarehq
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: hqdb0.internal-va.commcarehq.org
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -225,10 +263,11 @@ postgresql_dbs:
     django_alias: synclogs
     django_migrate: true
     host: pgsynclog.internal-va.commcarehq.org
-    pgbouncer_host: pgsynclog.internal-va.commcarehq.org
     name: commcarehq_synclogs
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: pgsynclog.internal-va.commcarehq.org
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -237,10 +276,11 @@ postgresql_dbs:
     django_alias: ucr
     django_migrate: false
     host: hqdb0.internal-va.commcarehq.org
-    pgbouncer_host: hqdb0.internal-va.commcarehq.org
     name: commcarehq_ucr
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: hqdb0.internal-va.commcarehq.org
     port: 6432
     query_stats: true
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
