--- a/tests/postgresql_config/2018-04-04-softlayer-snapshot/.generated.yml
+++ b/tests/postgresql_config/2018-04-04-softlayer-snapshot/.generated.yml
@@ -4,10 +4,11 @@ postgresql_dbs:
     django_alias: default
     django_migrate: true
     host: 10.162.36.205
-    pgbouncer_host: 10.162.36.205
     name: commcarehq
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: 10.162.36.205
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -15,70 +16,86 @@ postgresql_dbs:
     django_alias: p1
     django_migrate: true
     host: 10.162.36.205
-    pgbouncer_host: 10.162.36.205
     name: commcarehq_p1
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: 10.162.36.205
     port: 6432
     query_stats: false
-    shards: [0, 204]
+    shards:
+    - 0
+    - 204
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   - create: true
     django_alias: p2
     django_migrate: true
     host: 10.162.36.205
-    pgbouncer_host: 10.162.36.205
     name: commcarehq_p2
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: 10.162.36.205
     port: 6432
     query_stats: false
-    shards: [205, 409]
+    shards:
+    - 205
+    - 409
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   - create: true
     django_alias: p3
     django_migrate: true
     host: 10.162.36.205
-    pgbouncer_host: 10.162.36.205
     name: commcarehq_p3
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: 10.162.36.205
     port: 6432
     query_stats: false
-    shards: [410, 614]
+    shards:
+    - 410
+    - 614
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   - create: true
     django_alias: p4
     django_migrate: true
     host: 10.162.36.205
-    pgbouncer_host: 10.162.36.205
     name: commcarehq_p4
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: 10.162.36.205
     port: 6432
     query_stats: false
-    shards: [615, 819]
+    shards:
+    - 615
+    - 819
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   - create: true
     django_alias: p5
     django_migrate: true
     host: 10.162.36.205
-    pgbouncer_host: 10.162.36.205
     name: commcarehq_p5
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: 10.162.36.205
     port: 6432
     query_stats: false
-    shards: [820, 1023]
+    shards:
+    - 820
+    - 1023
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   - create: true
     django_alias: proxy
     django_migrate: true
     host: 10.162.36.205
-    pgbouncer_host: 10.162.36.205
     name: commcarehq_proxy
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: 10.162.36.205
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -86,10 +103,11 @@ postgresql_dbs:
     django_alias: synclogs
     django_migrate: true
     host: 10.162.36.205
-    pgbouncer_host: 10.162.36.205
     name: commcarehq_synclogs
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: 10.162.36.205
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -97,10 +115,11 @@ postgresql_dbs:
     django_alias: ucr
     django_migrate: true
     host: 10.162.36.205
-    pgbouncer_host: 10.162.36.205
     name: commcarehq_ucr
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: 10.162.36.205
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -108,10 +127,11 @@ postgresql_dbs:
     django_alias: null
     django_migrate: true
     host: 10.162.36.205
-    pgbouncer_host: 10.162.36.205
     name: formplayer
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: 10.162.36.205
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -119,10 +139,11 @@ postgresql_dbs:
     django_alias: icds-ucr
     django_migrate: true
     host: 10.162.36.205
-    pgbouncer_host: 10.162.36.205
     name: icds-ucr
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: 10.162.36.205
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -131,10 +152,11 @@ postgresql_dbs:
     django_alias: icds-ucr
     django_migrate: true
     host: 10.162.36.205
-    pgbouncer_host: 10.162.36.205
     name: icds-ucr
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: 10.162.36.205
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -145,75 +167,91 @@ postgresql_dbs:
         django_alias: p1
         django_migrate: true
         host: 10.162.36.205
-        pgbouncer_host: 10.162.36.205
         name: commcarehq_p1
         options: {}
         password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+        pg_config: []
+        pgbouncer_host: 10.162.36.205
         port: 6432
         query_stats: false
-        shards: [0, 204]
+        shards:
+        - 0
+        - 204
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p2:
         create: true
         django_alias: p2
         django_migrate: true
         host: 10.162.36.205
-        pgbouncer_host: 10.162.36.205
         name: commcarehq_p2
         options: {}
         password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+        pg_config: []
+        pgbouncer_host: 10.162.36.205
         port: 6432
         query_stats: false
-        shards: [205, 409]
+        shards:
+        - 205
+        - 409
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p3:
         create: true
         django_alias: p3
         django_migrate: true
         host: 10.162.36.205
-        pgbouncer_host: 10.162.36.205
         name: commcarehq_p3
         options: {}
         password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+        pg_config: []
+        pgbouncer_host: 10.162.36.205
         port: 6432
         query_stats: false
-        shards: [410, 614]
+        shards:
+        - 410
+        - 614
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p4:
         create: true
         django_alias: p4
         django_migrate: true
         host: 10.162.36.205
-        pgbouncer_host: 10.162.36.205
         name: commcarehq_p4
         options: {}
         password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+        pg_config: []
+        pgbouncer_host: 10.162.36.205
         port: 6432
         query_stats: false
-        shards: [615, 819]
+        shards:
+        - 615
+        - 819
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p5:
         create: true
         django_alias: p5
         django_migrate: true
         host: 10.162.36.205
-        pgbouncer_host: 10.162.36.205
         name: commcarehq_p5
         options: {}
         password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+        pg_config: []
+        pgbouncer_host: 10.162.36.205
         port: 6432
         query_stats: false
-        shards: [820, 1023]
+        shards:
+        - 820
+        - 1023
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
     proxy:
       create: true
       django_alias: proxy
       django_migrate: true
       host: 10.162.36.205
-      pgbouncer_host: 10.162.36.205
       name: commcarehq_proxy
       options: {}
       password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+      pg_config: []
+      pgbouncer_host: 10.162.36.205
       port: 6432
       query_stats: false
       user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -222,10 +260,11 @@ postgresql_dbs:
     django_alias: null
     django_migrate: true
     host: 10.162.36.205
-    pgbouncer_host: 10.162.36.205
     name: formplayer
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: 10.162.36.205
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -234,10 +273,11 @@ postgresql_dbs:
     django_alias: default
     django_migrate: true
     host: 10.162.36.205
-    pgbouncer_host: 10.162.36.205
     name: commcarehq
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: 10.162.36.205
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -247,10 +287,11 @@ postgresql_dbs:
     django_alias: synclogs
     django_migrate: true
     host: 10.162.36.205
-    pgbouncer_host: 10.162.36.205
     name: commcarehq_synclogs
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: 10.162.36.205
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -259,10 +300,11 @@ postgresql_dbs:
     django_alias: ucr
     django_migrate: true
     host: 10.162.36.205
-    pgbouncer_host: 10.162.36.205
     name: commcarehq_ucr
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: 10.162.36.205
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
