--- a/tests/postgresql_config/2018-04-04-staging-snapshot/.generated.yml
+++ b/tests/postgresql_config/2018-04-04-staging-snapshot/.generated.yml
@@ -4,10 +4,11 @@ postgresql_dbs:
     django_alias: default
     django_migrate: true
     host: hqdb1-staging.internal-va.commcarehq.org
-    pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
     name: commcarehq
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
     port: 6432
     query_stats: true
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -15,70 +16,86 @@ postgresql_dbs:
     django_alias: p1
     django_migrate: true
     host: hqdb1-staging.internal-va.commcarehq.org
-    pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
     name: commcarehq_p1
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
     port: 6432
     query_stats: true
-    shards: [0, 99]
+    shards:
+    - 0
+    - 99
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   - create: true
     django_alias: p2
     django_migrate: true
     host: hqdb1-staging.internal-va.commcarehq.org
-    pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
     name: commcarehq_p2
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
     port: 6432
     query_stats: true
-    shards: [100, 199]
+    shards:
+    - 100
+    - 199
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   - create: true
     django_alias: p3
     django_migrate: true
     host: hqdb1-staging.internal-va.commcarehq.org
-    pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
     name: commcarehq_p3
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
     port: 6432
     query_stats: true
-    shards: [200, 299]
+    shards:
+    - 200
+    - 299
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   - create: true
     django_alias: p4
     django_migrate: true
     host: hqdb1-staging.internal-va.commcarehq.org
-    pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
     name: commcarehq_p4
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
     port: 6432
     query_stats: true
-    shards: [300, 399]
+    shards:
+    - 300
+    - 399
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   - create: true
     django_alias: p5
     django_migrate: true
     host: hqdb1-staging.internal-va.commcarehq.org
-    pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
     name: commcarehq_p5
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
     port: 6432
     query_stats: true
-    shards: [400, 511]
+    shards:
+    - 400
+    - 511
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
   - create: true
     django_alias: proxy
     django_migrate: true
     host: hqdb1-staging.internal-va.commcarehq.org
-    pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
     name: commcarehq_proxy
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -86,10 +103,11 @@ postgresql_dbs:
     django_alias: synclogs
     django_migrate: true
     host: hqdb1-staging.internal-va.commcarehq.org
-    pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
     name: commcarehq_synclogs
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -97,10 +115,11 @@ postgresql_dbs:
     django_alias: ucr
     django_migrate: false
     host: hqdb1-staging.internal-va.commcarehq.org
-    pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
     name: commcarehq_ucr
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
     port: 6432
     query_stats: true
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -108,10 +127,11 @@ postgresql_dbs:
     django_alias: null
     django_migrate: true
     host: hqdb1-staging.internal-va.commcarehq.org
-    pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
     name: formplayer
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -123,75 +143,91 @@ postgresql_dbs:
         django_alias: p1
         django_migrate: true
         host: hqdb1-staging.internal-va.commcarehq.org
-        pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
         name: commcarehq_p1
         options: {}
         password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+        pg_config: []
+        pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
         port: 6432
         query_stats: true
-        shards: [0, 99]
+        shards:
+        - 0
+        - 99
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p2:
         create: true
         django_alias: p2
         django_migrate: true
         host: hqdb1-staging.internal-va.commcarehq.org
-        pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
         name: commcarehq_p2
         options: {}
         password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+        pg_config: []
+        pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
         port: 6432
         query_stats: true
-        shards: [100, 199]
+        shards:
+        - 100
+        - 199
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p3:
         create: true
         django_alias: p3
         django_migrate: true
         host: hqdb1-staging.internal-va.commcarehq.org
-        pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
         name: commcarehq_p3
         options: {}
         password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+        pg_config: []
+        pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
         port: 6432
         query_stats: true
-        shards: [200, 299]
+        shards:
+        - 200
+        - 299
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p4:
         create: true
         django_alias: p4
         django_migrate: true
         host: hqdb1-staging.internal-va.commcarehq.org
-        pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
         name: commcarehq_p4
         options: {}
         password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+        pg_config: []
+        pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
         port: 6432
         query_stats: true
-        shards: [300, 399]
+        shards:
+        - 300
+        - 399
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
       p5:
         create: true
         django_alias: p5
         django_migrate: true
         host: hqdb1-staging.internal-va.commcarehq.org
-        pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
         name: commcarehq_p5
         options: {}
         password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+        pg_config: []
+        pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
         port: 6432
         query_stats: true
-        shards: [400, 511]
+        shards:
+        - 400
+        - 511
         user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
     proxy:
       create: true
       django_alias: proxy
       django_migrate: true
       host: hqdb1-staging.internal-va.commcarehq.org
-      pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
       name: commcarehq_proxy
       options: {}
       password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+      pg_config: []
+      pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
       port: 6432
       query_stats: false
       user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -200,10 +236,11 @@ postgresql_dbs:
     django_alias: null
     django_migrate: true
     host: hqdb1-staging.internal-va.commcarehq.org
-    pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
     name: formplayer
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -212,10 +249,11 @@ postgresql_dbs:
     django_alias: default
     django_migrate: true
     host: hqdb1-staging.internal-va.commcarehq.org
-    pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
     name: commcarehq
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
     port: 6432
     query_stats: true
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -225,10 +263,11 @@ postgresql_dbs:
     django_alias: synclogs
     django_migrate: true
     host: hqdb1-staging.internal-va.commcarehq.org
-    pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
     name: commcarehq_synclogs
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
     port: 6432
     query_stats: false
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
@@ -237,10 +276,11 @@ postgresql_dbs:
     django_alias: ucr
     django_migrate: false
     host: hqdb1-staging.internal-va.commcarehq.org
-    pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
     name: commcarehq_ucr
     options: {}
     password: '{{ secrets.POSTGRES_USERS.commcare.password }}'
+    pg_config: []
+    pgbouncer_host: hqdb1-staging.internal-va.commcarehq.org
     port: 6432
     query_stats: true
     user: '{{ secrets.POSTGRES_USERS.commcare.username }}'
